--- a/login.html
+++ b/login.html
@@ -1,64 +1,59 @@
 ﻿<!doctype html>
 <html lang="zh-CN">
-<head>
-	<meta charset="utf-8">
-	<title>登录 - 芊浔体检管理系统</title>
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-	<link rel="icon" sizes="16x16" href="/favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="style/login.css?v=1.0.328" />
-	<script type="text/javascript" src="script/jquery.js"></script>
-	<script type="text/javascript" src="script/login.js?v=1.0.328"></script>
-	<!--[if lte IE 9]>
+
+	<head>
+		<meta charset="utf-8">
+		<title>登录 - 芊浔体检管理系统</title>
+		<meta name="keywords" content="" />
+		<meta name="description" content="" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="icon" sizes="16x16" href="/favicon.ico" />
+		<link rel="stylesheet" type="text/css" href="style/login.css?v=1.0.328" />
+
+		<!--[if lte IE 9]>
 	<script type="text/javascript" src="script/html5.js"></script>
 	<! [endif]-->
-</head>
-<body>
-<header class="header">
-	<div class="wrap">
-		<div class="tel">联系我们：400-800-8888</div>
-		<div class="logo"><i class="icon-logo"></i>芊浔体检管理系统</div>
-		<div class="clear"></div>
-	</div>
-</header>
-<section class="main">
-	<div class="wrap">
-		<div class="userbox">
-			<div class="userbox-bg"></div>
-			<div class="boxmain">
+	</head>
+
+	<body class="bg">
+		<div class="wrap" style="display: table">
+		<div style="display: table-cell;vertical-align: middle;">
+			<div class="logo-box">
+				<div class="logo-box-ct">
+					<img src="images/common/logo.png" />
+					<p class="title">体检管理系统</p>
+				</div> 
+			</div>
+			<div class="userbox">
 				<div class="box-name">登录</div>
 				<div class="item">
-					<div class="input-box">
-						<input type="text" class="input" id="user" />
-						<label for="user" class="input-tips">帐号</label>
-					</div>
+					<input type="text" class="input" id="user" placeholder="账号/手机号" />
 					<div class="error-tips"></div>
 				</div>
 				<div class="item">
-					<div class="input-box">
-						<input type="password" class="input" id="password" />
-						<label for="password" class="input-tips">密码</label>
-					</div>
+					<input type="password" class="input" id="password" placeholder="密码" />
 					<div class="error-tips"></div>
 				</div>
-				<div class="item forget">
-					<div class="input-box">
-						<a href="find-password.html">忘记密码？</a>
-						<input type="checkbox" value="" id="auto" />
-						<label for="auto" title="请勿在公共电脑使用此功能！">自动登录</label>
-					</div>
+				<div class="item">
+					<input type="password" class="input Code" id="Code" placeholder="验证码" />
 					<div class="error-tips"></div>
 				</div>
+
 				<div class="item">
 					<input type="submit" value="登录" class="enter-btn" />
 				</div>
+				<div class="no-AccountNumber">还没有账号，
+					<a href="javascript:void(0);">立即注册</a>
+				</div>
 			</div>
+		</div> 
 		</div>
-		<div class="clear"></div>
-	</div>
-</section>
-</body>
+	</body>
+	<script type="text/javascript" src="script/jquery.js"></script>
+	<script type="text/javascript" src="script/login.js?v=1.0.328"></script>
+	<script>
+		$('.wrap').css('height',$(window).height());
+	</script>
 </html>
