--- a/order.html
+++ b/order.html
@@ -1,82 +1,101 @@
 ﻿<!doctype html>
 <html lang="zh-CN">
-<head>
-	<meta charset="utf-8">
-	<title>订单验证 - 芊浔体检管理系统</title>
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-	<link rel="icon" sizes="16x16" href="/favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="style/global.css?v=1.0.1" />
-	<link rel="stylesheet" type="text/css" href="style/order.css?v=1.0.1" />
+
+	<head>
+		<meta charset="utf-8">
+		<title>订单验证 - 芊浔体检管理系统</title>
+		<meta name="keywords" content="" />
+		<meta name="description" content="" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="icon" sizes="16x16" href="/favicon.ico" />
+		<link rel="stylesheet" type="text/css" href="style/global.css?v=1.0.1" />
+		<link rel="stylesheet" type="text/css" href="style/order.css?v=1.0.1" />
+		<!--[if lte IE 9]>
+	<script type="text/javascript" src="script/html5.js"></script>
+	<! [endif]-->
+	</head>
+
+	<body>
+		<section class="main">
+			<div class="wrap">
+				<div class="main-right">
+					<!-- x-update -->
+					<div class="header clearfix">
+						<span class="welcome">Welcome，<em>成都八一骨科医院体检中心</em></span>
+
+						<a href="javascript:;" class="icon-logout"></a>
+						<a href="javascript:topset();" class="icon-set"></a>
+
+					</div>
+					<!-- x-update end -->
+
+					<div class="content">
+						<div class="ct-tit">快速验证订单</div>
+						<div class="order-box">
+							<p class="order-tit">请输入体检验证码：</p>
+							<div class="order-yz clearfix">
+								<input placeholder="请输入验证码" type="text" />
+								<button type="button">验证订单</button>
+							</div>
+							<p class="order-tit">验证结果：</p>
+							<div class="result_content clearfix">
+								<div class="re_left">
+									<div class="re_list clearfix">
+										<span class="tit">体检人：</span>
+										<span class="answer">洋洋</span>
+									</div>
+									<div class="re_list clearfix">
+										<span class="tit">手机号码：</span>
+										<span class="answer">13666154556</span>
+									</div>
+									<div class="re_list clearfix">
+										<span class="tit">性别：</span>
+										<span class="answer">女</span>
+									</div>
+									<div class="re_list clearfix">
+										<span class="tit">体检套餐：</span>
+										<span class="answer">入职体检A套餐</span>
+									</div>
+									<div class="re_list clearfix">
+										<span class="tit">套餐价格：</span>
+										<span class="answer">120元</span>
+									</div>
+								</div>
+								<div class="re_right clearfix">
+									<button type="button" class="re_true">使用</button>
+									<button type="button" class="re_false">取消</button>
+								</div>
+							</div> 
+						</div>
+					</div>
+					 
+				</div>
+				<div class="main-left">
+					<!-- x-add -->
+					<div class="left-logo">
+						<a href="#" class="line-height">
+							<img src="images/common/logo.png">
+							<p class="logo-ft">体检管理系统</p>
+						</a>
+					</div>
+					<!-- x-add end -->
+					<a class="nav-list" href="index.html"><span></span>首页</a>
+					<a class="nav-list on" href="order.html"><span></span>订单验证</a>
+					<a class="nav-list" href="reservation.html"><span></span>预约体检</a>
+					<a class="nav-list" href="package.html"><span></span>体检套餐</a>
+					<a class="nav-list" href="examination-item.html"><span></span>检查项目</a>
+					<a class="nav-list" href="report.html"><span></span>报告中心</a>
+					<a class="nav-list" href="statistics.html"><span></span>数据统计</a>
+					<a class="nav-list" href="hospital.html"><span></span>机构信息</a>
+				</div>
+				<div class="clear"></div>
+			</div>
+		</section>
+	</body>
 	<script type="text/javascript" src="script/jquery.js"></script>
 	<script type="text/javascript" src="script/global.js?v=1.0.1"></script>
 	<script type="text/javascript" src="script/order.js?v=1.0.1"></script>
-	<!--[if lte IE 9]>
-	<script type="text/javascript" src="script/html5.js"></script>
-	<! [endif]-->
-</head>
-<body>
-<header class="header">
-	<div class="wrap">
-		<div class="top-nav">
-			您好，<em>成都八一骨科医院体检中心</em>
-			<a href="javascript:topset();"><i class="icon-set"></i>设置</a>
-			<a href="javascript:;"><i class="icon-logout"></i>退出</a>
-		</div>
-		<div class="logo"><a href="index.html" title="芊浔体检管理系统"><i class="icon-logo"></i>芊浔体检管理系统</a></div>
-		<div class="clear"></div>
-	</div>
-</header>
-<section class="main">
-	<div class="wrap">
-		<div class="main-right">
-			<div class="prove">
-				<a href="order-list.html" class="btns">查看已验证订单</a>
-				体检验证码：<input type="text" value="" class="input" /><a href="javascript:;">确定</a>
-			</div>
-			<div class="package">
-				<div class="line"><h1>订单信息</h1></div>
-				<div class="line">
-					<div class="line-l">体检人：</div>
-					<div class="line-r">高须龙儿</div>
-				</div>
-				<div class="line">
-					<div class="line-l">性别：</div>
-					<div class="line-r">男</div>
-				</div>
-				<div class="line">
-					<div class="line-l">身份证：</div>
-					<div class="line-r">512501197203035172</div>
-				</div>
-				<div class="line">
-					<div class="line-l">手机号：</div>
-					<div class="line-r">13888888888</div>
-				</div>
-				<div class="line">
-					<div class="line-l">套餐：</div>
-					<div class="line-r">入职体检</div>
-				</div>
-				<div class="line">
-					<div class="line-l">价格：</div>
-					<div class="line-r">￥120.00</div>
-				</div>
-			</div>
-		</div>
-		<div class="main-left">
-			<a href="index.html">首页</a>
-			<a href="order.html" class="on">订单列表</a>
-			<a href="reservation.html">体检列表</a>
-			<a href="package.html">套餐管理</a>
-			<a href="examination-item.html">体检项目</a>
-			<a href="report.html">体检报告</a>
-			<a href="statistics.html">数据统计</a>
-			<a href="hospital.html">机构信息</a>
-		</div>
-		<div class="clear"></div>
-	</div>
-</section>
-</body>
+
 </html>
