--- a/package.html
+++ b/package.html
@@ -1,125 +1,147 @@
 ﻿<!doctype html>
 <html lang="zh-CN">
-<head>
-	<meta charset="utf-8">
-	<title>套餐管理 - 芊浔体检管理系统</title>
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-	<link rel="icon" sizes="16x16" href="/favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="style/global.css?v=1.0.1" />
-	<link rel="stylesheet" type="text/css" href="style/package.css?v=1.0.1" />
+
+	<head>
+		<meta charset="utf-8">
+		<title>套餐管理 - 芊浔体检管理系统</title>
+		<meta name="keywords" content="" />
+		<meta name="description" content="" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="icon" sizes="16x16" href="/favicon.ico" />
+		<link rel="stylesheet" type="text/css" href="style/global.css?v=1.0.1" />
+		<link rel="stylesheet" type="text/css" href="style/package.css?v=1.0.1" />
+		<!--[if lte IE 9]>
+	<script type="text/javascript" src="script/html5.js"></script>
+	<! [endif]-->
+	</head>
+
+	<body>
+
+		<section class="main">
+			<div class="wrap">
+				<div class="main-right">
+					<!-- x-update -->
+					<div class="header clearfix">
+						<span class="welcome">Welcome，<em>成都八一骨科医院体检中心</em></span>
+
+						<a href="javascript:;" class="icon-logout"></a>
+						<a href="javascript:topset();" class="icon-set"></a>
+
+					</div>
+					<!-- x-update end -->
+					<div class="content">
+						<div class="search clearfix">
+							<div class="input-box">
+								套餐名称：<input type="text" value="" class="input" />
+							</div>
+							<div class="condition condition-type">
+								<div class="condition-name">套餐类别：</div>
+								<div class="drop-down condition-box">
+									<div class="select">全部</div>
+									<div class="select-list">
+										<ul>
+											<li>全部</li>
+											<li>入职体检</li>
+											<li>中老年体检</li>
+											<li>常规体检</li>
+											<li>婚前体检</li>
+										</ul>
+									</div>
+									<div class="icon-dropdown"></div>
+								</div>
+							</div>
+
+							<a class="find" href="javascript:;">查找</a>
+						</div>
+						<!-- 操作 -->
+						<div class="operate clearfix">
+							<a class="add-icon" href="add-package.html"><i></i>添加</a>
+							<a class="update-icon" href="javascript:void(0)"><i></i>修改</a>
+							<a class="delete-icon" href="javascript:void(0)"><i></i>删除</a>
+						</div>
+
+						<div class="order-list">
+							<!--  暂无预约  no-order  -->
+							<div class="no-order">暂无体检套餐<a href="add-package.html" class="no_href">创建体检套餐</a></div>
+
+							<table class="table">
+								<thead class="thead">
+									<tr>
+										<th class="check-box"><input type="checkbox" class="checkAll" /> 全选</th>
+										<th class="package-name">预约套餐</th>
+										<th class="price">套餐价格</th>
+										<th class="class">套餐类别</th>
+										<th class="operating">操作</th>
+									</tr> 
+								</thead>
+								<tbody class="tbody">
+									<tr class="tr">
+										<td class="check-box"><input type="checkbox" class="checks" /></td>
+										<td class="package-name">入职体检套餐</td>
+										<td class="price">￥120</td>
+										<td class="class">入职体检</td>
+										<td class="operating">
+											<button type="button" class="xiaJia">下架</button>
+										</td>
+									</tr>
+									<tr class="tr">
+										<td class="check-box"><input type="checkbox" class="checks" /></td>
+										<td class="package-name">入职体检套餐</td>
+										<td class="price">￥120</td>
+										<td class="class">入职体检</td>
+										<td class="operating">
+											<button type="button" class="shangJia">上架</button>
+											<button type="button" class="update">修改</button>
+											<button type="button" class="delete del">删除</button>
+										</td>
+									</tr>
+
+								</tbody>
+							</table>
+
+						</div>
+
+						<div class="page">
+							<span>共56条记录</span>
+							<a href="javascript:;" class="prev no-prev" title="上一页">上一页</a>
+							<a href="javascript:;" class="now">1</a>
+							<a href="javascript:;">2</a>
+							<a href="javascript:;">3</a>
+							<a href="javascript:;">4</a>
+							<a href="javascript:;">5</a>
+							<a href="javascript:;">6</a>
+							<a href="javascript:;" class="next" title="下一页">下一页</a>
+						</div>
+
+					</div>
+
+				</div>
+				<div class="main-left">
+					<!-- x-add -->
+					<div class="left-logo">
+						<a href="#" class="line-height">
+							<img src="images/common/logo.png">
+							<p class="logo-ft">体检管理系统</p>
+						</a>
+					</div>
+					<!-- x-add end -->
+					<a class="nav-list" href="index.html"><span></span>首页</a>
+					<a class="nav-list" href="order.html"><span></span>订单验证</a>
+					<a class="nav-list" href="reservation.html"><span></span>预约体检</a>
+					<a class="nav-list on" href="package.html"><span></span>体检套餐</a>
+					<a class="nav-list" href="examination-item.html"><span></span>检查项目</a>
+					<a class="nav-list" href="report.html"><span></span>报告中心</a>
+					<a class="nav-list" href="statistics.html"><span></span>数据统计</a>
+					<a class="nav-list" href="hospital.html"><span></span>机构信息</a>
+				</div>
+				<div class="clear"></div>
+			</div>
+		</section>
+	</body>
 	<script type="text/javascript" src="script/jquery.js"></script>
 	<script type="text/javascript" src="script/global.js?v=1.0.1"></script>
 	<script type="text/javascript" src="script/package.js?v=1.0.1"></script>
-	<!--[if lte IE 9]>
-	<script type="text/javascript" src="script/html5.js"></script>
-	<! [endif]-->
-</head>
-<body>
-<header class="header">
-	<div class="wrap">
-		<div class="top-nav">
-			您好，<em>成都八一骨科医院体检中心</em>
-			<a href="javascript:topset();"><i class="icon-set"></i>设置</a>
-			<a href="javascript:;"><i class="icon-logout"></i>退出</a>
-		</div>
-		<div class="logo"><a href="index.html" title="芊浔体检管理系统"><i class="icon-logo"></i>芊浔体检管理系统</a></div>
-		<div class="clear"></div>
-	</div>
-</header>
-<section class="main">
-	<div class="wrap">
-		<div class="main-right">
-			<div class="search">
-				<a href="add-package.html" class="add-package"><i class="icon-add"></i>添加</a>
-				<div class="input-box">
-					套餐名称：<input type="text" value="" class="input" />
-				</div>
-				<div class="condition condition-type">
-					<div class="condition-name">套餐类型：</div>
-					<div class="drop-down condition-box">
-						<div class="select">全部</div>
-						<div class="select-list">
-							<ul>
-								<li>全部</li>
-								<li>入职体检</li>
-								<li>中老年体检</li>
-								<li>常规体检</li>
-								<li>婚前体检</li>
-							</ul>
-						</div>
-						<div class="icon-dropdown"></div>
-					</div>
-				</div>
-				<div class="condition">
-					<div class="condition-name">套餐状态：</div>
-					<div class="drop-down condition-box">
-						<div class="select">全部</div>
-						<div class="select-list">
-							<ul>
-								<li>全部</li>
-								<li>上架</li>
-								<li>下架</li>
-							</ul>
-						</div>
-						<div class="icon-dropdown"></div>
-					</div>
-				</div>
-				<a href="javascript:;">查找</a>
-			</div>
-			<div class="order-list">
-				<div class="thead">
-					<div class="type">类型</div>
-					<div class="package-name">套餐名称</div>
-					<div class="price">个检价格</div>
-					<div class="price">团检价格</div>
-					<div class="operating">操作</div>
-				</div>
-				<div class="tbody">
-					<!--没有任何体检套餐，显示 no-package-->
-					<div class="no-package">暂无体检套餐<a href="add-package.html">创建体检套餐</a></div>
-					<div class="tr">
-						<div class="type">入职体检</div>
-						<div class="package-name">入职体检</div>
-						<div class="price">￥120.00</div>
-						<div class="price">￥110.00</div>
-						<div class="operating"><a href="javascript:;" class="off">下架</a></div>
-					</div>
-					<div class="tr">
-						<div class="type">常规体检</div>
-						<div class="package-name">职场精英男性高端套餐</div>
-						<div class="price">￥120.00</div>
-						<div class="price">￥110.00</div>
-						<div class="operating"><a href="javascript:;" class="off">下架</a></div>
-					</div>
-					<div class="tr">
-						<div class="type">中老年体检</div>
-						<div class="package-name">中老年人基础套餐（已婚女）</div>
-						<div class="price">￥120.00</div>
-						<div class="price">￥110.00</div>
-						<div class="operating"><a href="javascript:;" class="on">上架</a><a href="edit-package.html" class="edit">修改</a><a href="javascript:;" class="del">删除</a></div>
-					</div>
-				</div>
-			</div>
-			<div class="page">
-				<a href="javascript:;" class="prev no-prev" title="上一页">上一页</a><a href="javascript:;" class="now">1</a><a href="javascript:;">2</a><a href="javascript:;">3</a><a href="javascript:;">4</a><a href="javascript:;">5</a><a href="javascript:;">6</a><a href="javascript:;" class="next" title="下一页">下一页</a>
-			</div>
-		</div>
-		<div class="main-left">
-			<a href="index.html">首页</a>
-			<a href="order.html">订单列表</a>
-			<a href="reservation.html">体检列表</a>
-			<a href="package.html" class="on">套餐管理</a>
-			<a href="examination-item.html">体检项目</a>
-			<a href="report.html">体检报告</a>
-			<a href="statistics.html">数据统计</a>
-			<a href="hospital.html">机构信息</a>
-		</div>
-		<div class="clear"></div>
-	</div>
-</section>
-</body>
+
 </html>
