--- a/report.html
+++ b/report.html
@@ -1,186 +1,207 @@
 ﻿<!doctype html>
 <html lang="zh-CN">
-<head>
-	<meta charset="utf-8">
-	<title>体检报告 - 芊浔体检管理系统</title>
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-	<link rel="icon" sizes="16x16" href="/favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="style/global.css?v=1.0.1" />
-	<link rel="stylesheet" type="text/css" href="style/report.css?v=1.0.1" />
+
+	<head>
+		<meta charset="utf-8">
+		<title>体检报告 - 芊浔体检管理系统</title>
+		<meta name="keywords" content="" />
+		<meta name="description" content="" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="icon" sizes="16x16" href="/favicon.ico" />
+		<link rel="stylesheet" type="text/css" href="style/global.css?v=1.0.1" />
+		<link rel="stylesheet" type="text/css" href="style/report.css?v=1.0.1" />
+		<!--[if lte IE 9]>
+	<script type="text/javascript" src="script/html5.js"></script>
+	<! [endif]-->
+	</head>
+
+	<body>
+
+		<section class="main">
+			<div class="wrap">
+				<div class="main-right">
+					<!-- x-update -->
+					<div class="header clearfix">
+						<span class="welcome">Welcome，<em>成都八一骨科医院体检中心</em></span>
+
+						<a href="javascript:;" class="icon-logout"></a>
+						<a href="javascript:topset();" class="icon-set"></a>
+
+					</div>
+					<!-- x-update end -->
+
+					<div class="content">
+						<div class="search clearfix">
+							<div class="condition">
+								<div class="condition-name">体检时间：</div>
+								<div class="condition-box calendar">
+									<div class="icon-calendar"></div>
+									<div class="date"></div>
+								</div>
+							</div>
+							<div class="input-box">
+								体检人姓名：<input type="text" value="" class="input" />
+							</div>
+							<div class="input-box">
+								手机号：<input type="text" value="" class="input" />
+							</div> 
+							<a class="find" href="javascript:;">查找</a>
+						</div>
+						
+						<div class="order-list">
+							<!--  暂无预约  no-order  -->
+							<div class="no-order">暂无体检人</div>
+							<table class="table">
+								<thead class="thead">
+									<tr>
+										<th class="time">体检时间</th>
+										<th class="name">姓名</th>
+										<th class="sex">性别</th>
+										<th class="tel">手机号</th>
+										<th class="package-name">体检套餐</th>
+										<th class="operating">体检报告</th> 
+									</tr>
+								</thead>
+								<tbody class="tbody">
+									<tr class="tr">
+										<td class="time">2017-05-04</td>
+										<td class="name">高须龙儿</td>
+										<td class="sex">男</td>
+										<td class="tel">13888888888</td>
+										<td class="package-name">入职体检</td>
+										<td class="operating">
+											<!--<a href="javascript:;" class="upload">上传</a>-->
+											<button class="upload">上传</button>
+										</td>  
+									</tr> 
+									<tr class="tr">
+										<td class="time">2017-05-04</td>
+										<td class="name">高须龙儿</td>
+										<td class="sex">男</td>
+										<td class="tel">13888888888</td>
+										<td class="package-name">入职体检</td>
+										<td class="operating"> 
+											<button class="view">查看</button>
+											<button class="update">修改</button>
+										</td>  
+									</tr> 
+								</tbody>
+							</table> 
+						</div>
+						 
+						<div class="page">
+							<span>共56条记录</span>
+							<a href="javascript:;" class="prev no-prev" title="上一页">上一页</a>
+							<a href="javascript:;" class="now">1</a>
+							<a href="javascript:;">2</a>
+							<a href="javascript:;">3</a>
+							<a href="javascript:;">4</a>
+							<a href="javascript:;">5</a>
+							<a href="javascript:;">6</a>
+							<a href="javascript:;" class="next" title="下一页">下一页</a>
+						</div>
+						<div class="view-report">
+							<div class="view-close"><em></em>的体检报告
+								<a href="javascript:;" title="关闭">关闭</a>
+							</div>
+							<div class="report-list">
+								<div class="report-box">
+									<li>第一页</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>第一页</li>
+								</div>
+								<div class="report-box">
+									<li>第二页</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>第二页</li>
+								</div>
+								<div class="report-box">
+									<li>第三页</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
+									<li>第三页</li>
+								</div>
+							</div>
+							<div class="report-page">
+								<div class="next">
+									<a href="javascript:;">下一页</a>
+								</div>
+								<div class="prev">
+									<a href="javascript:;">上一页</a>
+								</div>
+								<div class="pagenumber">
+									<a href="javascript:;" class="first-page">首页</a><em>1</em>/<span></span>
+									<a href="javascript:;" class="last-page">尾页</a>
+								</div>
+							</div>
+							<div class="bottom">
+								<a href="javascript:;" title="关闭">关闭</a>
+							</div>
+						</div>
+
+					</div>
+				</div>
+				<div class="main-left">
+					<!-- x-add -->
+					<div class="left-logo">
+						<a href="#" class="line-height">
+							<img src="images/common/logo.png">
+							<p class="logo-ft">体检管理系统</p>
+						</a>
+					</div>
+					<!-- x-add end -->
+					<a class="nav-list" href="index.html"><span></span>首页</a>
+					<a class="nav-list" href="order.html"><span></span>订单验证</a>
+					<a class="nav-list" href="reservation.html"><span></span>预约体检</a>
+					<a class="nav-list" href="package.html"><span></span>体检套餐</a>
+					<a class="nav-list" href="examination-item.html"><span></span>检查项目</a>
+					<a class="nav-list on" href="report.html"><span></span>报告中心</a>
+					<a class="nav-list" href="statistics.html"><span></span>数据统计</a>
+					<a class="nav-list" href="hospital.html"><span></span>机构信息</a>
+				</div>
+				<div class="clear"></div>
+			</div>
+		</section>
+	</body>
 	<script type="text/javascript" src="script/jquery.js"></script>
 	<script type="text/javascript" src="script/global.js?v=1.0.1"></script>
 	<script type="text/javascript" src="script/report.js?v=1.0.1"></script>
-	<!--[if lte IE 9]>
-	<script type="text/javascript" src="script/html5.js"></script>
-	<! [endif]-->
-</head>
-<body>
-<header class="header">
-	<div class="wrap">
-		<div class="top-nav">
-			您好，<em>成都八一骨科医院体检中心</em>
-			<a href="javascript:topset();"><i class="icon-set"></i>设置</a>
-			<a href="javascript:;"><i class="icon-logout"></i>退出</a>
-		</div>
-		<div class="logo"><a href="index.html" title="芊浔体检管理系统"><i class="icon-logo"></i>芊浔体检管理系统</a></div>
-		<div class="clear"></div>
-	</div>
-</header>
-<section class="main">
-	<div class="wrap">
-		<div class="main-right">
-			<div class="search">
-				<div class="condition">
-					<div class="condition-name">体检时间：</div>
-					<div class="condition-box calendar">
-						<div class="icon-calendar"></div>
-						<div class="date"></div>
-					</div>
-				</div>
-				<div class="input-box">
-					姓名：<input type="text" value="" class="input" />
-				</div>
-				<div class="input-box">
-					手机号：<input type="text" value="" class="input" />
-				</div>
-				<div class="condition">
-					<div class="condition-name">体检报告：</div>
-					<div class="drop-down condition-box">
-						<div class="select">不限</div>
-						<div class="select-list">
-							<ul>
-								<li>不限</li>
-								<li>已上传</li>
-								<li>未上传</li>
-							</ul>
-						</div>
-						<div class="icon-dropdown"></div>
-					</div>
-				</div>
-				<a href="javascript:;">查找</a>
-			</div>
-			<div class="order-list">
-				<div class="thead">
-					<div class="time">体检时间</div>
-					<div class="name">姓名</div>
-					<div class="sex">性别</div>
-					<div class="tel">手机号</div>
-					<div class="package-name">体检套餐</div>
-					<div class="operating">体检报告</div>
-				</div>
-				<div class="tbody">
-					<!--没有任何体检人，显示 no-order-->
-					<div class="no-order">暂无体检人</div>
-					<div class="tr">
-						<div class="time">2017-05-04</div>
-						<div class="name">高须龙儿</div>
-						<div class="sex">男</div>
-						<div class="tel">13888888888</div>
-						<div class="package-name">入职体检</div>
-						<div class="operating"><a href="javascript:;" class="upload">上传</a></div>
-					</div>
-					<div class="tr">
-						<div class="time">2017-05-01</div>
-						<div class="name">逢坂大河</div>
-						<div class="sex">女</div>
-						<div class="tel">15888888888</div>
-						<div class="package-name">入职体检</div>
-						<div class="operating"><a href="javascript:;" class="view">查看</a></div>
-					</div>
-					<div class="tr">
-						<div class="time">2017-04-28</div>
-						<div class="name">栉枝实乃梨</div>
-						<div class="sex">女</div>
-						<div class="tel">18988888888</div>
-						<div class="package-name">入职体检</div>
-						<div class="operating"><a href="javascript:;" class="view">查看</a></div>
-					</div>
-				</div>
-			</div>
-			<div class="page">
-				<a href="javascript:;" class="prev no-prev" title="上一页">上一页</a><a href="javascript:;" class="now">1</a><a href="javascript:;">2</a><a href="javascript:;">3</a><a href="javascript:;">4</a><a href="javascript:;">5</a><a href="javascript:;">6</a><a href="javascript:;" class="next" title="下一页">下一页</a>
-			</div>
-			<div class="view-report">
-				<div class="view-close"><em></em>的体检报告<a href="javascript:;" title="关闭">关闭</a></div>
-				<div class="report-list">
-					<div class="report-box">
-						<li>第一页</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>第一页</li>
-					</div>
-					<div class="report-box">
-						<li>第二页</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>第二页</li>
-					</div>
-					<div class="report-box">
-						<li>第三页</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>阿斯发生大幅阿斯蒂芬阿斯蒂芬爱的色放</li>
-						<li>第三页</li>
-					</div>
-				</div>
-				<div class="report-page">
-					<div class="next"><a href="javascript:;">下一页</a></div>
-					<div class="prev"><a href="javascript:;">上一页</a></div>
-					<div class="pagenumber"><a href="javascript:;" class="first-page">首页</a><em>1</em>/<span></span><a href="javascript:;" class="last-page">尾页</a></div>
-				</div>
-				<div class="bottom">
-					<a href="javascript:;" title="关闭">关闭</a>
-				</div>
-			</div>
-		</div>
-		<div class="main-left">
-			<a href="index.html">首页</a>
-			<a href="order.html">订单列表</a>
-			<a href="reservation.html">体检列表</a>
-			<a href="package.html">套餐管理</a>
-			<a href="examination-item.html">体检项目</a>
-			<a href="report.html" class="on">体检报告</a>
-			<a href="statistics.html">数据统计</a>
-			<a href="hospital.html">机构信息</a>
-		</div>
-		<div class="clear"></div>
-	</div>
-</section>
-</body>
+
 </html>
