--- a/statistics.html
+++ b/statistics.html
@@ -1,70 +1,87 @@
 ﻿<!doctype html>
 <html lang="zh-CN">
-<head>
-	<meta charset="utf-8">
-	<title>数据统计 - 芊浔体检管理系统</title>
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-	<link rel="icon" sizes="16x16" href="/favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="style/global.css?v=1.0.1" />
-	<link rel="stylesheet" type="text/css" href="style/statistics.css?v=1.0.1" />
+
+	<head>
+		<meta charset="utf-8">
+		<title>数据统计 - 芊浔体检管理系统</title>
+		<meta name="keywords" content="" />
+		<meta name="description" content="" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="icon" sizes="16x16" href="/favicon.ico" />
+		<link rel="stylesheet" type="text/css" href="style/global.css?v=1.0.1" />
+		<link rel="stylesheet" type="text/css" href="style/statistics.css?v=1.0.1" />
+		<!--[if lte IE 9]>
+	<script type="text/javascript" src="script/html5.js"></script>
+	<! [endif]-->
+	</head>
+
+	<body>
+
+		<section class="main">
+			<div class="wrap">
+				<div class="main-right">
+					<!-- x-update -->
+					<div class="header clearfix">
+						<span class="welcome">Welcome，<em>成都八一骨科医院体检中心</em></span>
+
+						<a href="javascript:;" class="icon-logout"></a>
+						<a href="javascript:topset();" class="icon-set"></a>
+
+					</div>
+					<!-- x-update end -->
+
+					<div class="content clearfix">
+						<div class="btns clearfix">
+							<a class="findmore" href="detail.html">查看明细</a>
+							
+							<div class="now-data clearfix">
+								<div class="center">
+									<div class="prev"></div>
+									<span class="now-text">2017年3月29日</span>
+									<div class="next"></div>
+								</div> 
+							</div>
+							<a href="javascript:;" class="filter on">本月</a>
+							<a href="javascript:;" class="filter">本季</a>
+							<a href="javascript:;" class="filter">本年</a>
+						</div>
+						<div class="box-name">
+							<div class="people">体检人数统计（位）</div> 
+						</div>
+						<div class="statistics">数据</div>
+						<div class="box-name">
+							<div class="money">交易金额（千元）</div>
+						</div>
+						<div class="statistics">数据</div>
+					</div>
+
+				</div>
+				<div class="main-left">
+					<!-- x-add -->
+					<div class="left-logo">
+						<a href="#" class="line-height">
+							<img src="images/common/logo.png">
+							<p class="logo-ft">体检管理系统</p>
+						</a>
+					</div>
+					<!-- x-add end -->
+					<a class="nav-list" href="index.html"><span></span>首页</a>
+					<a class="nav-list" href="order.html"><span></span>订单验证</a>
+					<a class="nav-list" href="reservation.html"><span></span>预约体检</a>
+					<a class="nav-list" href="package.html"><span></span>体检套餐</a>
+					<a class="nav-list" href="examination-item.html"><span></span>检查项目</a>
+					<a class="nav-list" href="report.html"><span></span>报告中心</a>
+					<a class="nav-list on" href="statistics.html"><span></span>数据统计</a>
+					<a class="nav-list" href="hospital.html"><span></span>机构信息</a>
+				</div>
+				<div class="clear"></div>
+			</div>
+		</section>
+	</body>
 	<script type="text/javascript" src="script/jquery.js"></script>
 	<script type="text/javascript" src="script/global.js?v=1.0.1"></script>
 	<script type="text/javascript" src="script/statistics.js?v=1.0.1"></script>
-	<!--[if lte IE 9]>
-	<script type="text/javascript" src="script/html5.js"></script>
-	<! [endif]-->
-</head>
-<body>
-<header class="header">
-	<div class="wrap">
-		<div class="top-nav">
-			您好，<em>成都八一骨科医院体检中心</em>
-			<a href="javascript:topset();"><i class="icon-set"></i>设置</a>
-			<a href="javascript:;"><i class="icon-logout"></i>退出</a>
-		</div>
-		<div class="logo"><a href="index.html" title="芊浔体检管理系统"><i class="icon-logo"></i>芊浔体检管理系统</a></div>
-		<div class="clear"></div>
-	</div>
-</header>
-<section class="main">
-	<div class="wrap">
-		<div class="main-right">
-			<div class="btns">
-				<a href="detail.html">查看明细</a>
-				<a href="javascript:;" class="filter on">本周</a>
-				<a href="javascript:;" class="filter">本月</a>
-				<a href="javascript:;" class="filter">今年</a>
-			</div>
-			<div class="box-name">
-				<div class="people">体检人数统计（位）</div>
-				<div class="now-data">
-					<div class="prev"></div>
-					<div class="now-text">2017年3月29日</div>
-					<div class="next"></div>
-				</div>
-			</div>
-			<div class="statistics">数据</div>
-			<div class="box-name">
-				<div class="money">交易金额（千元）</div>
-			</div>
-			<div class="statistics">数据</div>
-		</div>
-		<div class="main-left">
-			<a href="index.html">首页</a>
-			<a href="order.html">订单列表</a>
-			<a href="reservation.html">体检列表</a>
-			<a href="package.html">套餐管理</a>
-			<a href="examination-item.html">体检项目</a>
-			<a href="report.html">体检报告</a>
-			<a href="statistics.html" class="on">数据统计</a>
-			<a href="hospital.html">机构信息</a>
-		</div>
-		<div class="clear"></div>
-	</div>
-</section>
-</body>
+
 </html>
