--- a/examination-item.html
+++ b/examination-item.html
@@ -69,10 +69,10 @@
 
 						<!-- 操作 -->
 						<div class="operate clearfix">
-							<a class="Import-icon" href="javascript:viod(0)"><i></i>批量导入</a>
-							<a class="add-icon" href="javascript:viod(0)"><i></i>添加</a>
-							<a class="delete-icon" href="javascript:viod(0)"><i></i>删除</a>
-							<a class="class-icon" href="javascript:viod(0)"><i></i>类别管理</a>
+							<a class="Import-icon" href="javascript:void(0)"><i></i>批量导入</a>
+							<a class="add-icon" href="javascript:void(0)"><i></i>添加</a>
+							<a class="delete-icon" href="javascript:void(0)"><i></i>删除</a>
+							<a class="class-icon" href="javascript:void(0)"><i></i>类别管理</a>
 						</div>
 
 						<div class="order-list">
