--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 					<!-- x-update -->
 					<div class="header clearfix">
 						<span class="welcome">Welcome，<em>成都八一骨科医院体检中心</em></span> 
-						<a href="javascript:;" class="icon-logout"></a>
-						<a href="javascript:topset();" class="icon-set"></a> 
+						<a href="javascript:;" class="icon-logout" title="退出"></a>
+						<a href="javascript:topset();" class="icon-set" title="设置"></a> 
 					</div>
 					<!-- x-update end -->
 
